# mc-server-wrapper

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: audit.yml  ci.yml  daily-audit.yml  publish.yml
example-data/1.15.2/advancements/: advancements03.json  advancements04.json  advancements07.json  advancements08.json  advancements09.json  advancements11.json  advancements13.json  advancements14.json  advancements15.json  advancements16.json
example-data/1.15.2/stats/: stats1.json  stats11.json  stats3.json  stats4.json  stats5.json  stats6.json  stats8.json  stats9.json
mc-server-wrapper/: Cargo.toml
mc-server-wrapper-lib/: Cargo.toml  README.md
mc-server-wrapper-lib/examples/: basic.rs
mc-server-wrapper-lib/src/: communication.rs  lib.rs  parse.rs
mc-server-wrapper-lib/src/test/parse/: mod.rs  spigot.rs  vanilla.rs
mc-server-wrapper/src/: config.rs  discord.rs  error.rs  logging.rs  main.rs  ui.rs
mc-server-wrapper/src/discord/: message_span_iter.rs  mod.rs  util.rs
mc-server-wrapper/src/liveview/: mod.rs
sample-data/1.15.2/advancements/: advancements01.json  advancements02.json  advancements05.json  advancements06.json  advancements10.json  advancements12.json  advancements17.json  advancements18.json
sample-data/1.15.2/stats/: stats10.json  stats2.json  stats7.json
src/: command.rs  error.rs  main.rs  parse.rs  server_wrapper.rs
src/test/parse/: mod.rs  spigot.rs  vanilla.rs
