[package]
name = "mc-server-wrapper-lib"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Cldfire"]
edition = "2018"

[dependencies]
chrono = "0.4"
tokio = { version = "1.8.1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
once_cell = "1.5"

[dev-dependencies]
rusty-hook = "^0.11.1"
structopt = "0.3"
