[package]
name = "mc-server-wrapper-lib"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Cldfire"]
edition = "2018"

[dependencies]
time = { version = "0.3.17", features = [
    "local-offset",
    "formatting",
    "macros",
] }
tokio = { version = "1.24.1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
once_cell = "1.5"

[dev-dependencies]
structopt = "0.3"
