[package]
name = "mc-server-wrapper"
version = "0.1.0-alpha6"
license = "MIT OR Apache-2.0"
authors = ["Cldfire"]
edition = "2018"

[dependencies]
mc-server-wrapper-lib = { path = "../mc-server-wrapper-lib" }
structopt = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3"
twilight-http = "0.9"
twilight-gateway = "0.9"
twilight-cache-inmemory = "0.9"
twilight-model = "0.9"
twilight-command-parser = "0.9"
twilight-mention = "0.9"
# TODO: replace this with a crate of my own
minecraft-chat = "0.1"
log = "0.4"
fern = "0.6"
log-panics = "2.0"
chrono = "0.4"
once_cell = "1.5"
scopeguard = "1.1"
anyhow = "1.0"
crossterm = { version = "0.22", features = ["event-stream"] }
tui = "0.17"
unicode-width = "0.1"
textwrap = "0.14"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
notify = "4.0"

[dev-dependencies]
expect-test = "1.0"
