[package]
name = "mc-server-wrapper"
version = "0.1.0-alpha7"
license = "MIT OR Apache-2.0"
authors = ["Cldfire"]
edition = "2018"

[dependencies]
mc-server-wrapper-lib = { path = "../mc-server-wrapper-lib" }
structopt = "0.3"
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3"
twilight-http = "0.14.0"
twilight-gateway = "0.14.0"
twilight-cache-inmemory = "0.14.0"
twilight-model = "0.14.0"
twilight-mention = "0.14.0"
# TODO: replace this with a crate of my own
minecraft-chat = "0.1"
log = "0.4"
fern = "0.6"
log-panics = "2.0"
time = { version = "0.3.6", features = [
    "local-offset",
    "formatting",
    "macros",
] }
once_cell = "1.5"
scopeguard = "1.1"
anyhow = "1.0"
crossterm = { version = "0.25.0", features = ["event-stream"] }
tui = "0.19.0"
unicode-width = "0.1"
textwrap = "0.16.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
notify-debouncer-mini = { version = "0.2.1", default-features = false }

[dev-dependencies]
expect-test = "1.0"
